[metadata]
name = tpnameit
description = Renamer Tool to easily rename DCC objects in a visual way
long_description = file: README.rst
long_description_content_type = text/x-rst
version = 0.0.1
license = MIT
license_file = LICENSE
author = Tomas Poveda
author_email = tpovedatd@gmail.com
url = https://github.com/tpoveda/tpRenamer

[options]
zip_safe = False
include_package_data = true
package_dir=
    =source
packages=find:
install_requires =
    pyyaml
    lucidity
    tpPyUtils
    tpDccLib
    tpQtLib
    tpNameIt

[options.packages.find]
where=source

[options.extras_require]
dev =
    wheel

test =
    pytest

[bdist_wheel]
universal=1