[metadata]
name = tpRigToolkit-tools-renamer
description = Renamer Tool to easily rename DCC objects in a visual way
long_description = file: README.rst
long_description_content_type = text/x-rst
version = attr: tpRigToolkit.tools.renamer.__version__.__version__
license = MIT
license_file = LICENSE
author = Tomas Poveda
author_email = tpovedatd@gmail.com
url = https://github.com/tpRigToolkit/tpRigToolkit-tools-renamer

[options]
zip_safe = False
include_package_data = true
packages=find:
install_requires =
    pyyaml
    lucidity
    tpDcc-tools-renamer

[options.extras_require]
dev =
    wheel

test =
    pytest

[bdist_wheel]
universal=1